<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.HomeFragment"
    android:id="@+id/home_view">


    <ImageView
        android:id="@+id/topView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/ciudades"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mapButton"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="40dp"
        android:viewportWidth="341"
        android:viewportHeight="112"
        android:backgroundTint="#88ffffff"
        app:shapeAppearanceOverlay="@style/HomeCardShape">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/map_square_icon"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_name"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/filtro_icon"
                android:layout_gravity="top|end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/stationsButton"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="20dp"
        android:viewportWidth="341"
        android:viewportHeight="112"
        android:backgroundTint="#88ffffff"
        app:shapeAppearanceOverlay="@style/HomeCardShape">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/clipboard_stations"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/station_name"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/filtro_icon"
            android:layout_gravity="top|end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"/>



    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/favoritesButton"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#88ffffff"
        app:shapeAppearanceOverlay="@style/HomeCardShape">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/outline_favorite_border_black"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_name"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/filtro_icon"
            android:layout_gravity="top|end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"/>



    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/aboutUsButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="20dp"
        android:viewportWidth="341"
        android:viewportHeight="112"
        android:backgroundTint="#88ffffff"
        app:shapeAppearanceOverlay="@style/HomeCardShape">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/circle_question_regular"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_name"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/filtro_icon"
            android:layout_gravity="top|end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"/>



    </com.google.android.material.card.MaterialCardView>


</LinearLayout>
