<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ProgressBar
        android:id="@+id/pb_station_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/stationDetailsTop"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:layout_gravity="end"
        >

        <TextView
            android:id="@+id/stationDetailsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/station_name"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayoutStationDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:columnCount="2"
        android:rowCount="3">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="170dp"
            android:layout_height="180dp"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            app:shapeAppearanceOverlay="@style/translucentCard"
            android:layout_marginTop="10dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center|top"
                >

                <TextView
                    android:id="@+id/temperatureDetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/sensor_temperature"
                    android:textColor="@color/appbar_background_color"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="#E6E9F0" />


                <LinearLayout
                    android:id="@+id/stationDetailsTemperature"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="170dp"
            android:layout_height="180dp"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            app:shapeAppearanceOverlay="@style/translucentCard"
            android:layout_marginTop="10dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center|top"
                >

                <TextView
                    android:id="@+id/humidityDetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/sensor_humidity"
                    android:textColor="@color/appbar_background_color"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="#E6E9F0" />

                <LinearLayout
                    android:id="@+id/stationDetailsHumidity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="170dp"
            android:layout_height="180dp"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            app:shapeAppearanceOverlay="@style/translucentCard"
            android:layout_marginTop="10dp"
            app:cardElevation="20dp">

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center|top"
                >

                <TextView
                    android:id="@+id/reliabilityDetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/sensor_reliability"
                    android:textColor="@color/appbar_background_color"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="#E6E9F0" />


                <LinearLayout
                    android:id="@+id/stationDetailsReliability"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"/>


                </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="170dp"
            android:layout_height="180dp"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            app:shapeAppearanceOverlay="@style/translucentCard"
            android:layout_marginTop="10dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center|top"
                >

                <TextView
                    android:id="@+id/precipitationsDetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/sensor_precipitations"
                    android:textColor="@color/appbar_background_color"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="#E6E9F0" />


                <LinearLayout
                    android:id="@+id/stationDetailsPrecipitations"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"/>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="170dp"
            android:layout_height="180dp"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            app:shapeAppearanceOverlay="@style/translucentCard"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center|top"
                >

                <TextView
                    android:id="@+id/Property5DetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/sensor_pm1"
                    android:textColor="@color/appbar_background_color"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="#E6E9F0" />

                <LinearLayout
                    android:id="@+id/stationDetailsPm1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="170dp"
            android:layout_height="180dp"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:elevation="20dp"
            app:shapeAppearanceOverlay="@style/translucentCard"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center|top"
                >

                <TextView
                    android:id="@+id/Property6DetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/sensor_pm10"
                    android:textColor="@color/appbar_background_color"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="#E6E9F0" />

                <LinearLayout
                    android:id="@+id/stationDetailsPm10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"/>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </GridLayout>

</LinearLayout>