<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AboutUsFragment">

    <LinearLayout
        android:id="@+id/lg_header_about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_background_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        >

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/ic_splash_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/lg_text_color"
            android:fontFamily="@font/asap_medium"
            android:text="@string/app_name"
            android:textSize="22dp" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"

        app:layout_constraintTop_toBottomOf="@id/lg_header_about_us"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            >

            <!-- Media -->
            <!--<ImageView
                android:layout_width="match_parent"
                android:layout_height="194dp"
                app:srcCompat="@drawable/media"
                android:scaleType="centerCrop"
                android:contentDescription="@string/content_description_media"
                />-->

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/anim_about_us" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                >

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/about_us"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:justificationMode="inter_word"
                    android:text="@string/about_us_description"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    />
              <!--  <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/test"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    />
-->
            </LinearLayout>

            <!-- Buttons -->
            <!--<LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/action_1"
                    style="?attr/borderlessButtonStyle"
                    />
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_2"
                    style="?attr/borderlessButtonStyle"
                    />
            </LinearLayout>-->

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_fyware"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"

        app:layout_constraintTop_toBottomOf="@id/card_about_us"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            >

            <!-- Media -->
            <!--<ImageView
                android:layout_width="match_parent"
                android:layout_height="194dp"
                app:srcCompat="@drawable/media"
                android:scaleType="centerCrop"
                android:contentDescription="@string/content_description_media"
                />-->

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/anim_about_us" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                >

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/about_us"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:justificationMode="inter_word"
                    android:text="@string/about_us_description"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    />
                <!--  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="16dp"
                      android:text="@string/test"
                      android:textAppearance="?attr/textAppearanceBody2"
                      android:textColor="?android:attr/textColorSecondary"
                      />
  -->
            </LinearLayout>

            <!-- Buttons -->
            <!--<LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/action_1"
                    style="?attr/borderlessButtonStyle"
                    />
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_2"
                    style="?attr/borderlessButtonStyle"
                    />
            </LinearLayout>-->

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <!--
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background=""
        android:minHeight="150dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/lg_header_about_us"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

       <com.airbnb.lottie.LottieAnimationView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/anim_about_us"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">


        </LinearLayout>

    </androidx.cardview.widget.CardView>
-->


</androidx.constraintlayout.widget.ConstraintLayout>